--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -1,2 +1,85 @@
 ghjbkuninikn
 tengo  miedo
+#include <iostream>
+#include <string.h>
+using namespace std;
+
+char Preguntas(P[15])
+{
+  P[0]=" "
+  P[1]=" "
+  P[2]=" "
+  P[3]=" "
+  P[4]=" "
+  P[5]=" "
+  P[6]=" "
+  P[7]=" "
+  P[8]=" "
+  P[9]=" "
+  P[10]=" "
+  P[11]=" "
+  P[12]=" "
+  P[13]=" "
+  P[14]=" "
+  
+
+}
+char Respuestas(R[15])
+{
+  R[0]=" "
+  R[1]=" "
+  R[2]=" "
+  R[3]=" "
+  R[4]=" "
+  R[5]=" "
+  R[6]=" "
+  R[7]=" "
+  R[8]=" "
+  R[9]=" "
+  R[10]=" "
+  R[11]=" "
+  R[12]=" "
+  R[13]=" "
+  R[14]=" "
+}
+
+void Cuestionario(string usua)
+{
+  int i, punt;
+  char preg[15], resp[15];
+  char miresp[];
+  cout<<"Empecemos con las preguntas..."<<endl;
+  Preguntas(preg);
+  Respuestas(resp);
+  cout<<"Recuerde escribir su respuesta con una correcta ortografía"<<endl;
+  i=0;
+  punt=0;
+  while(i<15)
+  {
+    cout<<"Pregunta "<<i<<" :"<<endl;
+    cout<<P[i]<<endl;
+    cout<<"Ingrese su respuesta: ";
+    cin>>miresp;
+    strlwr(miresp);
+    if(miresp==Respuestas[i])
+      punt++;
+  }
+  cout<<"En este  cuestionario usted ha obtenido un total de "<<punt<<" puntos"<<endl;
+}
+
+void MenúPrincipal()
+{
+  cout<<"Menú Principal"<<endl;
+  cout<<"1. Cuestionario"<<endl;
+  cout<<"2. Leaderboard"<<endl;
+  cout<<"3. Finalizar"<<endl;
+  }
+
+int main() {
+  cout << "Hello World!\n"<<endl;
+  char usuario;
+  cout<<"Ingrese el nombre del usuario: ";
+  cin>>usuario;
+  Cuestionario(usuario);
+
+}
